<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true">


  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
      android:id="@+id/textView1"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginStart="20dp"
      android:text="@string/total_weight"/>


    <EditText
      android:id="@+id/editText1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_below="@+id/textView1"
      android:ems="5"
      android:inputType="number"
      android:maxLength="4"/>


    <TextView
      android:id="@+id/textView2"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginStart="20dp"
      android:layout_below="@+id/editText1"
      android:text="@string/price"/>

    <EditText
      android:id="@+id/editText2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_below="@+id/textView2"
      android:ems="5"
      android:inputType="number"
      android:maxLength="2"/>


    <TextView
      android:id="@+id/textView3"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginStart="20dp"
      android:layout_below="@+id/editText2"
      android:text="@string/total_coco"/>


    <EditText
      android:id="@+id/editText3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_below="@+id/textView3"
      android:ems="5"
      android:inputType="number"
      android:maxLength="4"/>


    <Button
      android:id="@+id/button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20sp"
      android:layout_marginBottom="20dp"
      android:layout_below="@+id/editText3"
      android:layout_centerHorizontal="true"
      android:paddingLeft="30dp"
      android:paddingRight="30dp"
      android:background="@drawable/rounded_corner_button"
      android:text="@string/check"
      android:textColor="@android:color/white"/>

    <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginStart="20dp"
      android:layout_below="@+id/button"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:textColor="@color/colorG"/>

    <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginStart="20dp"
      android:layout_below="@+id/textView4"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:textColor="@color/colorP"/>

    <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginStart="20dp"
      android:layout_below="@+id/textView7"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:textColor="@color/colorV"/>

    <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginStart="20dp"
      android:layout_below="@+id/textView5"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:textColor="@color/colorR"/>


  </RelativeLayout>

</ScrollView>