<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/total_weight"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="number"
            android:maxLength="4"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="@+id/textView1"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />


        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/Vehicle_weight"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText1" />


        <EditText
            android:id="@+id/editText10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="number"
            android:textSize="@dimen/_15sdp"
            android:maxLength="4"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/coco_weight"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText10" />


        <EditText
            android:id="@+id/editText11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:editable="false"
            android:ems="5"
            android:focusable="false"
            android:inputType="number"
            android:maxLength="4"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/price"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText11" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="5"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/total_coco"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />


        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="number"
            android:maxLength="4"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_corner_button"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/check"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:textColor="@color/colorG"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            android:textColor="@color/colorP"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            android:textColor="@color/colorV"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:textColor="@color/colorR"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />



        <TextView
            android:visibility="gone"
            android:id="@+id/Notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/notes"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />


        <EditText
            android:visibility="gone"
            android:id="@+id/textNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="@+id/Notes"
            app:layout_constraintTop_toBottomOf="@+id/Notes" />


        <Button
            android:visibility="gone"
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/rounded_corner_button"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/save_this"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNotes"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
